#348 - Fixed that the URL will be re-encoded when it is already encoded.